--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-
+<a href="music.html">Go Now</a>
   <div class="boxLoading">
     <svg version="1.1" id="Layer_1" x="0px" y="0px" viewBox="-387 289 24 24">
       <style type="text/css">
@@ -91,33 +91,14 @@
     </svg>
   </div>
   <div class="shadow"></div>
-  <!-- <div class="loader">
-    <div class="loader__bar"></div>
-    <div class="loader__bar"></div>
-    <div class="loader__bar"></div>
-    <div class="loader__bar"></div>
-    <div class="loader__bar"></div>
-    <div class="loader__ball">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        	 viewBox="-387 289 24 24" style="enable-background:new -387 289 24 24;" xml:space="preserve">
-        <style type="text/css">
-        	.st0{fill:none;}
-        	.st1{fill:#FAFAFA;}
-        	.st2{fill:#00ACC1;}
-        </style>
-        <path class="st0" d="M-387,289h24v24h-24V289z"/>
-        <circle class="st1" cx="-375" cy="301" r="12"/>
-        <path class="st2" d="M-375,294.3v7.9c-0.4-0.3-1-0.4-1.5-0.4c-1.7,0-3,1.3-3,3s1.3,3,3,3s3-1.3,3-3v-7.5h3v-3H-375z"/>
-        </svg>
-
-    </div>
-  </div> -->
 
 
   <!-- build:js(.) scripts/vendor.js -->
   <!-- bower:js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
   <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/classie/classie.js"></script>
+  <script src="/bower_components/Snap.svg/dist/snap.svg-min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
